--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   min-height: 100vh;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
 }
 
 aside {
@@ -67,4 +69,63 @@ aside {
 main {
   flex: 1;
   flex-basis: 50%;
+
+  > section {
+    padding: clamp(4px, 5vw, 25%) clamp(4px, 2.5vw, 32px);
+  }
+
+  section > p {
+    font-weight: 500;
+    font-size: clamp(1.25rem, 2vw, 1.5rem);
+    max-width: 70ch;
+  }
+
+  section > p:nth-child(3) {
+    margin-top: 16px;
+    margin-bottom: 32px;
+  }
+}
+
+form {
+  h3 {
+    margin-bottom: 32px;
+    font-size: 2rem;
+    font-weight: 400;
+  }
+
+  > section {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+    padding: 16px 32px 24px;
+    margin-bottom: 16px;
+
+    > div {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px 32px;
+    }
+
+    .form-control {
+      flex-grow: 1;
+      flex-basis: 350px;
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+      input {
+        padding: 6px;
+        border-radius: 2px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+      }
+
+      label {
+        font-weight: 600;
+        font-size: 12px;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+      }
+    }
+  }
+
+  .invalid {
+    display: none;
+  }
 }
