--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ aside {
 main {
   flex: 1;
   flex-basis: 50%;
+  padding-bottom: 32px;
 
   > section {
     padding: clamp(4px, 5vw, 25%) clamp(4px, 2.5vw, 32px);
@@ -89,6 +90,7 @@ main {
 }
 
 form {
+  margin-bottom: 32px;
   h3 {
     margin-bottom: 32px;
     font-size: 2rem;
@@ -150,5 +152,20 @@ form {
 
   .invalid {
     display: none;
+  }
+}
+
+.login {
+  padding-left: var(--padding-left);
+  font-weight: 500;
+
+  a {
+    color: var(--submit-button-clr);
+    font-weight: 600;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
